--- a/index.html
+++ b/index.html
@@ -10,9 +10,24 @@
 </head>
 <body>
     <div class="container">
-        <div class="box"><header><h1>Hello</h1></header></div>
-        <nav></nav>
-        <div class="first"><h1>Frosted Christmas Cookies Recipe</h1><p>Steps</p></div>
+        <nav><nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">Navbar</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+              <div class="navbar-nav">
+                <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="#">Recipies</a>
+                <a class="nav-item nav-link" href="#">Contact us</a>
+                <a class="nav-item nav-link" href="#">Learn more</a>
+              </div>
+            </div>
+          </nav></nav>
+        <header><h1>Hello</h1></header>
+        
+        <div class="first"><h1>Latest Bakeries around the corner!</h1><p>Check out our 
+          latest bakeries to make for the holidays.</p></div>
         <div class="second"></div>
         <div class="cookies"></div>
         <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
@@ -31,6 +46,7 @@
           <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<script src="./js/main.js"></script>
     </div>
 </body>
 </html>
